--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 24px;
+    flex: 0 0 82px;
 
     .title {
         display: flex;
@@ -20,6 +21,13 @@
             font-size: .875rem;
             line-height: 1.25rem;
             font-weight: 400;
+
+            .count {
+                color: rgb(58 175 174);
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 20px;
+            }
         }
     }
 
