--- a/src/app/components/Sidebar/Sidebar.module.scss
+++ b/src/app/components/Sidebar/Sidebar.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
-    padding: 20px 5px;
+    padding: 20px 5px 25px 5px;
     align-items: center;
     background-color: rgb(249 249 249);
     // border: 1px solid black;
@@ -72,6 +72,39 @@
                             color: gray;
                         }
                     }
+                }
+
+                .active-link {
+                    .icon {
+                        * {
+                            color: rgb(58, 175, 174);
+                        }
+                    }
+                }
+            }
+        }
+
+        .exit {
+            width: 48px;
+            height: 48px;
+            align-self: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            border: 1.6px solid rgb(235, 78, 49);
+            overflow: hidden;
+
+            &:hover {
+                cursor: pointer;
+            }
+
+            .file {
+                width: 25px;
+                height: 25px;
+
+                * {
+                    color: rgb(235, 78, 49);
                 }
             }
         }
